--- a/style.css
+++ b/style.css
@@ -3,3 +3,31 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+:root {
+  /* (intro and email sign up background) */
+  --Dark-Blue: hsl(217, 28%, 15%);
+  /* (main background) */
+  --Dark-Blue: hsl(218, 28%, 13%);
+  /* (footer background) */
+  --Dark-Blue: hsl(216, 53%, 9%);
+  /* (testimonials background) */
+  --Dark-Blue: hsl(219, 30%, 18%);
+
+  /* (inside call-to-action gradient) */
+  --Cyan: hsl(176, 68%, 64%);
+  /* (inside call-to-action gradient) */
+  --Blue: hsl(198, 60%, 50%);
+  /* (error) */
+  --Light-Red: hsl(0, 100%, 63%);
+
+  --White: hsl(0, 0%, 100%);
+}
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
