--- a/style.css
+++ b/style.css
@@ -457,6 +457,9 @@ footer {
 }
 
 @media (max-width: 375px) {
+  main {
+    padding: 0;
+  }
   nav {
     padding: 10px 4%;
   }
@@ -476,7 +479,7 @@ footer {
   }
 
   .maincontent {
-    padding: 0;
+    padding: 0 10px;
     min-height: unset;
     background-image: url(./images/bg-curvy-mobile.svg);
   }
@@ -506,7 +509,7 @@ footer {
 
   .features {
     grid-template-columns: 1fr;
-    padding: 0;
+    padding: 0 10px;
     width: 100%;
   }
 
@@ -558,7 +561,6 @@ footer {
   .testimonials {
     flex-direction: column;
     padding: 50px 20px 150px;
-
     background-color: var(--Dark-Blue-1);
   }
 
@@ -589,6 +591,7 @@ footer {
 
   footer {
     width: 100%;
+    padding: 0 10px;
   }
   .getSignedUp {
     display: flex;
@@ -598,7 +601,7 @@ footer {
   }
 
   .addressInfo {
-    font-size: 17px;
+    font-size: 15px;
     margin-bottom: 15px;
   }
 
@@ -648,7 +651,7 @@ footer {
 
   .phoneAddress ul li a,
   .left-contacts ul li a {
-    font-size: 17px;
+    font-size: 14px;
     font-weight: 400;
   }
   .socialIcons {
